--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="neem/app"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
+	<classpathentry kind="lib" path="D:/nimspace/api/slf4j/1.7.4/slf4j-1.7.4/slf4j-api-1.7.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
