--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>nw.commons</groupId>
+  <groupId>com.nimworks</groupId>
   <artifactId>nw.commons</artifactId>
   <version>1.1</version>
   <name>nw.commons</name>
+  <distributionManagement>
+	  <snapshotRepository>
+	    <id>ossrh</id>
+	    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  </snapshotRepository>
+	</distributionManagement>
   <build>
     <sourceDirectory>neem/app</sourceDirectory>
     <plugins>
@@ -15,6 +21,31 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+      	<groupId>org.sonatype.plugins</groupId>
+      	<artifactId>nexus-staging-maven-plugin</artifactId>
+      	<version>1.6.5</version>
+      	<extensions>true</extensions>
+		  <configuration>
+		     <serverId>ossrh</serverId>
+		     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+		     <autoReleaseAfterClose>true</autoReleaseAfterClose>
+		  </configuration>
+      </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+      	<artifactId>maven-gpg-plugin</artifactId>
+      	<version>1.6</version>
+      	<executions>
+        <execution>
+          <id>sign-artifacts</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>sign</goal>
+          </goals>
+        </execution>
+      </executions>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -24,4 +55,9 @@
   		<version>1.7.10</version>
   	</dependency>
   </dependencies>
+  <organization>
+  	<name>Neemworks</name>
+  	<url>http://www.nimworks.com</url>
+  </organization>
+  <url>http://commons.nimworks.com</url>
 </project>
