--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.nimworks</groupId>
   <artifactId>nw.commons</artifactId>
-  <version>1.2</version>
+  <version>1.2.1-Beta1</version>
   <name>nw.commons</name>
   <distributionManagement>
 	  <snapshotRepository>
@@ -12,6 +12,7 @@
 	</distributionManagement>
   <build>
     <sourceDirectory>neem/app</sourceDirectory>
+    <testSourceDirectory>neem/test</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -63,6 +64,11 @@
   		<groupId>org.slf4j</groupId>
   		<artifactId>integration</artifactId>
   		<version>1.7.10</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
   	</dependency>
   </dependencies>
   <organization>
