--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,20 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>integration</artifactId>
-  		<version>1.7.10</version>
-  	</dependency>
-  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.7.12</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hamcrest</groupId>
+  		<artifactId>hamcrest-junit</artifactId>
+  		<version>1.0.0.0</version>
   		<scope>test</scope>
   	</dependency>
   </dependencies>
