--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,5 @@
      	<distribution>repo</distribution>
   	</license>
   </licenses>
-  <version>2.0.0-b1</version>
+  <version>2.0.0-SNAPSHOT</version>
 </project>
