--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,11 @@
      	<distribution>repo</distribution>
   	</license>
   </licenses>
+  <scm>
+  	<url>https://github.com/Neemworks/nw.commons</url>
+  	<developerConnection>Ogwara O. Rowland</developerConnection>
+  	<tag>orm</tag>
+  	<connection>https://github.com/Neemworks/nw.commons</connection>
+  </scm>
   <version>2.0.0</version>
 </project>
