--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.nimworks</groupId>
   <artifactId>nw.commons</artifactId>
-  <name>Common Utils</name>
+  <name>Basic Commons</name>
   <distributionManagement>
 	  <snapshotRepository>
 	    <id>ossrh</id>
@@ -74,7 +74,7 @@
   	<name>Neemworks</name>
   	<url>http://www.nimworks.com</url>
   </organization>
-  <url>http://commons.nimworks.com</url>
+  <url>https://github.com/Neemworks/nw.commons</url>
   <description>A commons utility for Neemworks</description>
   <inceptionYear>2013</inceptionYear>
   <developers>
@@ -93,9 +93,13 @@
   </licenses>
   <scm>
   	<url>https://github.com/Neemworks/nw.commons</url>
-  	<developerConnection>Ogwara O. Rowland</developerConnection>
-  	<tag>orm</tag>
-  	<connection>https://github.com/Neemworks/nw.commons</connection>
+  	<developerConnection>scm:git:https://github.com/Neemworks/nw.commons.git</developerConnection>
+  	<tag>master</tag>
+  	<connection>scm:git:https://github.com/Neemworks/nw.commons.git</connection>
   </scm>
-  <version>1.3.0</version>
+  <version>1.3.1</version>
+  <issueManagement>
+  	<url>https://github.com/Neemworks/nw.commons/issues</url>
+  	<system>Github</system>
+  </issueManagement>
 </project>
