--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,19 @@
+before_scripts:
+	script: "mvn clean"
+	
 stages:
-   - test
    - build
-
-test:
-    script: "mvn test"
-
-build:
-    script: "mvn clean package install"
+   - deploy
+		
+build_phase:
+	stage: build
+	script: "mvn test javadoc:jar source:jar package install"
+	environment: maven_local
+	
+deploy_phase:
+	stage: deploy
+	only:
+		- master
+	script: "mvn deploy -Dnexus.target=http://repo.nimworks.com:8081/repository/maven-snapshots/"
+	environment: nexus_repo
+	
