--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,18 @@
-before_scripts:
-	script: "mvn clean"
-	
+before_script:
+    - "mvn clean"
+
 stages:
-   - build
-   - deploy
-		
+    - build
+    - deploy
+
 build_phase:
-	stage: build
-	script: "mvn test javadoc:jar source:jar package install"
-	environment: maven_local
-	
+    stage: build
+    script: "mvn test javadoc:jar source:jar package install"
+    environment: maven_local
+
 deploy_phase:
-	stage: deploy
-	only:
-		- master
-	script: "mvn deploy -Dnexus.target=http://repo.nimworks.com:8081/repository/maven-snapshots/"
-	environment: nexus_repo
-	
+    stage: deploy
+    only:
+       - master
+    script: "mvn deploy -Dnexus.target=http://repo.nimworks.com:8081/repository/maven-snapshots/"
+    environment: nexus_repo
