--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 		<tag>master</tag>
 		<connection>scm:git:https://github.com/Neemworks/nw.commons.git</connection>
 	</scm>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.2</version>
 	<issueManagement>
 		<url>https://github.com/Neemworks/nw.commons/issues</url>
 		<system>Github</system>
